# decision-hub

./: .gitignore  CLAUDE.md  INVESTIGATION.md  MERGE_APPROACH.md  Makefile  README.md  SPRINT3_NOTES.md  pyproject.toml
.claude/commands/: test-login-and-upload.md
.github/workflows/: ci.yml  deploy-dev.yml
bootstrap-skills/dhub-cli/: SKILL.md
client/: README.md  pyproject.toml
client/src/dhub/: models.py
client/src/dhub/cli/: access.py  app.py  auth.py  config.py  config_cmd.py  keys.py  org.py  output.py  registry.py  runtime.py  search.py  track.py  version_check.py
client/src/dhub/core/: install.py  manifest.py  runtime.py  validation.py
client/tests/: conftest.py
client/tests/test_cli/: test_access_cli.py  test_auth_cli.py  test_config.py  test_keys_cli.py  test_logs_cli.py  test_org_cli.py  test_output.py  test_registry_cli.py  test_runtime_cli.py  test_search_cli.py  test_update_cli.py
client/tests/test_core/: test_docx_integration.py  test_install.py  test_install_symlinks.py  test_manifest.py  test_runtime.py  test_validation.py
docs/: runbook.md
frontend/src/: featureFlags.ts
scripts/: release-cli.sh  run_migrations.py
server/: modal_app.py  pyproject.toml
server/migrations/: 002_eval_audit_logs.sql  003_migrate_eval_status_grades.sql  004_add_quarantine_s3_key.sql  006_add_download_count.sql  20260211_120000_add_private_skills.sql  (+6 more)
shared/: pyproject.toml
specs/: pr-06-private-skills.md  pr-14-auto-republish.md  pr-15-skill-categorization.md  pr-16-github-crawler.md  pr-17-search-hardening.md  pr-20-database-indexes.md
(+90 files in other folders)
