[project]
name = "dhub"
version = "0.1.0"
description = "The CLI package manager for AI agent skills"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
dhub = "dhub.cli.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dhub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
